force-app/main/default/objects/Claim_Setting__c/Claim_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>All default values for Claims</description>
    <label>Claims Settings</label>
</CustomObject>