force-app/main/default/objects/Claim_Setting__c/fields/ARDC_ISBA_First_Contribution__c.field-meta.xml
<CustomField>
    <fullName>ARDC_ISBA_First_Contribution__c</fullName>
    <label>ARDC ISBA First Contribution</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>