force-app/main/default/objects/Claim_Setting__c/fields/ARDC_Sublimit_Per_Lawyer__c.field-meta.xml
<CustomField>
    <fullName>ARDC_Sublimit_Per_Lawyer__c</fullName>
    <description>It is using in Claim for ARDC as Seprate sub limit</description>
    <label>ARDC Sublimit Per Lawyer</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>