force-app/main/default/objects/Claim_Setting__c/fields/ARDC_Sublimit_Per_Policy__c.field-meta.xml
<CustomField>
    <fullName>ARDC_Sublimit_Per_Policy__c</fullName>
    <label>ARDC Sublimit Per Policy</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>