force-app/main/default/objects/Claim_Setting__c/fields/Deductible_LAE_Applied_After__c.field-meta.xml
<CustomField>
    <fullName>Deductible_LAE_Applied_After__c</fullName>
    <description>Deductible is applied: 
Yes. After first $5,000 of LAE paid. Deductible applies to first dollar on indemnity (Loss). 
This field is use for only Deductible LAE applied after given amount.</description>
    <label>Deductible LAE Applied After</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>