force-app/main/default/objects/Claim_Setting__c/fields/Open_Reserve_Loss_Value__c.field-meta.xml
<CustomField>
    <fullName>Open_Reserve_Loss_Value__c</fullName>
    <label>Open Reserve Loss Value</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>